# linkedin-mcp

./: .gitignore  CLAUDE.md  Justfile  README.md  create_session.py  linkedin-mcp-setup-journal.md  list_mcp_tools.py  pyproject.toml  report_compkey.py  test_create_post.py  test_get_posts.py  test_linkedin_mcp.sh  test_mcp_scrape_post.py  test_repost_feed_playwright.py  test_repost_post.py  test_repost_ui.py  test_scrape_feed.py  test_scrape_feeds.py
docs/: linkedin-read-posts-problem.md
docs/analysis/: authentication-flow.md
docs/post-mortem/: 2026-06-25-scrape-feed-empty.md
linkedin_mcp/: __init__.py  callback_server.py  server.py
linkedin_mcp/config/: settings.py
linkedin_mcp/linkedin/: auth.py  post.py  reader.py  reader_legacy.py  repost.py  repost_ui.py
linkedin_mcp/utils/: __init__.py  logging.py
