[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linkedin-mcp = "linkedin_mcp.server:main"

[project]
name = "linkedin-mcp"
authors = [{name = "Filipp Trigub", email = "filipp@trigub.tech"}]
version = "0.1.5"
description = "LinkedIn MCP server with auth and posting tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin", "src/config"]